# netv

./: Dockerfile  Dockerfile.ffmpeg  README.md  cache.py  cache_test.py  docker-compose.yml  main.py  pyproject.toml  transcoding.py
.github/workflows/: ci.yml  ffmpeg-base.yml  release.yml
static/js/: player.js
templates/: guide.html  movie_detail.html  search.html  series.html  series_detail.html  settings.html  vod.html
