[project]
name = "netv"
version = "0.1.0"
description = "Minimal self-hosted IPTV web interface with EPG guide, VOD, and Chromecast"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Joshua V. Dillon" },
]
keywords = ["iptv", "streaming", "epg", "hls", "transcoding", "chromecast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Display",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "cryptography>=43.0",
    "defusedxml>=0.7",
]

[dependency-groups]
dev = [
    "basedpyright>=1.10",
    "httpx>=0.27",
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
]

[project.urls]
Repository = "https://github.com/jvdillon/netv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py"]

[tool.uv]
package = false

[tool.ruff]
fix = true
show-fixes = true
line-length = 100
output-format = "concise"
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM108"]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.11"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["*_test.py"]
